<resources>
    <string name="app_name">ELCare</string>
    <string name="intro_1">Hi I\'m Jolene.</string>
    <string name="intro_2">how may I help you?</string>
    <string name="jolene">Jolene</string>
    <string name="chat">Chat</string>
    <string name="SOS">SOS</string>
    <string name="monitor">Monitor</string>
    <string name="settings">Settings</string>
    <string name="speak">Speak</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="temp">Temperature</string>
    <string name="motion">Motion</string>
    <string name="monitoring">Monitoring</string>
    <string name="sound">Sound</string>
    <string name="inactive">Inactive</string>
    <string name="who_to_call">Who to call?</string>
    <string name="call">Call</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
</resources>