<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_1"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_2"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/chat_btn"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/dark_blue"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:src="@drawable/chat"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neuemontreal"
                        android:text="@string/chat"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/sos_btn"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/red"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:src="@drawable/danger"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neuemontreal"
                        android:text="@string/SOS"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/monitor_btn"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/green"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:src="@drawable/monitor"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neuemontreal"
                        android:text="@string/monitor"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/grey"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:src="@drawable/settings"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neuemontreal"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/speak_btn"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/light_blue"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:src="@drawable/speak" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neuemontreal"
                        android:text="@string/speak"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>




            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>


        </LinearLayout>

    </LinearLayout>




</LinearLayout>